--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 h1 {
 float: left;
-margin-left: 250px;
+margin-left: 100px;
 background-color: #4aaaa5;
 font-family: 'Georgia';
 color: white;
@@ -9,7 +9,7 @@ color: white;
 
 ul{
     float: right;
-    margin-right: 250px;
+    margin-right: 100px;
 }
 
 li {
@@ -17,13 +17,35 @@ li {
     color: white;
     text-align: center;
     padding: 5px 5px;
+    border-right: 1px solid #bbb;
+    
+}
+    
+li:last-child {
+        border-right: none;
+    }
+    
+
+
+div{
+    padding: 100px;
+
+}
+
+h2{
+    color: #4aaaa5;
+    border-bottom: 6px solid #cccccc;
+
+}
+
+a:link {
     text-decoration: none;
 }
 
-div{
-    padding: 70px;
+a:visited {
+    text-decoration: none;
 }
 
-h2 {
-   border-bottom-width: 10px;
+a:hover{
+    color: #4aaaa5;
 }
