--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,25 @@
+body{
+    margin-top: -22px;
+    background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/gravel.png");
+}
+
 .mainContent{
     border: 1px solid grey;
     padding: 20px;
-    
+    margin: 0 160px 0 160px;
+    background-color: white;
+    height: 500px;
 }
 
+
+h1{
+    color: white;
+    font-size: 23px;
+}
 h2{
     border-bottom: 2px solid grey;
+    font-family: 'Georgia', Times, Times New Roman, serif;
+    color: #4aaaa5;
 }
 
 input[type=text]{
@@ -15,20 +29,26 @@ input[type=text]{
 ul {
     text-align: right;
     margin-top: 35px;
+    
 }
 
 .header-name {
-    width: 50%;
+    width: 17%;
     float: left;
-    background-color: teal;
+    background-color:#4aaaa5;
+    margin-left: 160px;
+    height: 57px;
+    margin-top: 23px;
 }
 
 .header-navbar {
-    width: 50%;
-    float: left;
+    /* width: 82%; */
+    float: right;
+    margin-right: 160px;
 }
 .header {
     padding-bottom: 80px;
+    background: white;
 }
 
 .name {
@@ -37,4 +57,83 @@ ul {
 
 li {
     display: inline;
+    text-decoration: none;
+}
+
+/* .back-image{
+    background-image: url("https://www.toptal.com/designers/subtlepatterns/patterns/gravel.png");
+} */
+
+.box-container{
+    position: relative;
+}
+
+.box-1{
+    position: absolute;
+    border: 1px solid black;
+    width: 150px;
+    height: 120px;
+}
+
+.box-2{
+    position: absolute;
+    border: 1px solid black;
+    top: 180px;
+    width: 150px;
+    height: 120px;
+}
+
+.box-3{
+    position: absolute;
+    border: 1px solid black;
+    top: 310px;
+    width: 150px;
+    height: 120px;
+}
+
+.box-4{
+    position: absolute;
+    border: 1px solid black;
+    top: 50px;
+    left: 170px;
+    width: 150px;
+    height: 120px;
+}
+
+.box-5{
+    position: absolute;
+    border: 1px solid black;
+   top: 180px;
+   left: 170px;
+   width: 150px;
+    height: 120px;
+}
+
+img {
+    float: left;
+}
+
+a:link {
+    text-decoration: none;
+}
+
+a:visited {
+    text-decoration: none;
+}
+
+a {
+    color: grey;
+}
+
+li {
+    border-right: 1px solid #bbb;
+    padding-right: 5px;
+}
+
+li:last-child {
+    border-right: none;
+}
+
+h3{
+    background-color: #4aaaa5;
 }
